--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -1,4 +1,5 @@
 {% extends "ArgonWebBundle::layout.html.twig" %}
+{% set active = "homepage" %}
 
 {% block title %}{{ parent() }} - {{ "homepage.title"|trans }}{% endblock %}
 
