--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -54,7 +54,7 @@
       {% endif %}
 
       {% block wrapper %}
-      <main>
+      <main id="{{ active|default("default") }}">
         <section>
           {% block content %}{% endblock %}
         </section>
