--- a/src/Argon/WebBundle/Resources/sass/argonbook.scss
+++ b/src/Argon/WebBundle/Resources/sass/argonbook.scss
@@ -6,6 +6,7 @@ $acent-color:                       #ff4136;
 $anchor-color:                      #0074D9;
 $hover-color:                       $acent-color;
 $header-line-color:                 $acent-color;
+$logo-color:                        $acent-color;
 
 // 3rd party
 @import "waiting-for-dev/zass/sass/zass";
