--- a/src/Argon/WebBundle/Resources/sass/default/_header.scss
+++ b/src/Argon/WebBundle/Resources/sass/default/_header.scss
@@ -8,7 +8,8 @@ header {
     margin-top: 0;
     margin-bottom: 0;
     a {
-      font-weight: normal;
+      color: $logo-color;
+      font-weight: bold;
       text-decoration: none;
       &:hover {
         text-decoration: none;
