--- a/src/Argon/NewsBundle/Resources/views/Block/latest.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Block/latest.html.twig
@@ -1,5 +1,5 @@
 {% if entities|length %}
-  <h3>{{ "admin.news.posts"|trans }}</h3>
+  <h3>{{ "news.latest"|trans }}</h3>
   {% for post in entities %}
     {{ render(controller("ArgonNewsBundle:Block:post", {"post": post, "position": loop.index})) }}
   {% endfor %}
