--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -10,7 +10,7 @@
 <article>
   <h3>{{ "admin.dashboard.title"|trans }}</h3>
   <dl>
-    <dt>{{ "admin.dashboard.info.version"|trans }}</dt>
+    <dt>{{ "admin.dashboard.version"|trans }}</dt>
     <dd>{{ project.version }}</dd>
   </dl>
 </article>
