--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/new.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/new.html.twig
@@ -5,8 +5,8 @@
 
 {% block content %}
 <ol id="breadcrumb">
-  <li><a href="{{ path('admin_dashboard') }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  <li><a href="{{ path('admin_news') }}">{{ "admin.news.title"|trans }}</a></li>
+  <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
+  <li><a href="{{ path("admin_news") }}">{{ "admin.news.posts"|trans }}</a></li>
   <li class="active">{{ "admin.news.new"|trans }}</li>
 </ol>
 {{ form(form) }}
