--- a/src/Argon/GameBundle/Resources/views/Admin/Character/newExperience.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Character/newExperience.html.twig
@@ -1,14 +1,14 @@
 {% extends "ArgonWebBundle::layout_admin.html.twig" %}
 {% set active = "character" %}
 
-{% block title %}{{ parent() }} - {{ "admin.character.title"|trans }} - {{ character.name }} - {{ "admin.character_experience.title"|trans }} - {{ "admin.character_experience.new"|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "admin.character.characters"|trans }} - {{ character.name }} - {{ "admin.character_experience.experience"|trans }} - {{ "admin.character_experience.new"|trans }}{% endblock %}
 
 {% block content %}
 <ol id="breadcrumb">
   <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  <li><a href="{{ path("admin_character") }}">{{ "admin.character.title"|trans }}</a></li>
+  <li><a href="{{ path("admin_character") }}">{{ "admin.character.characters"|trans }}</a></li>
   <li>{{ character.name }}</li>
-  <li><a href="{{ path("admin_character_experience", {"id": character.id}) }}">{{ "admin.character_experience.title"|trans }}</a></li>
+  <li><a href="{{ path("admin_character_experience", {"id": character.id}) }}">{{ "admin.character_experience.experience"|trans }}</a></li>
   <li class="active">{{ "admin.character_experience.new"|trans }}</li>
 </ol>
 {{ form(form) }}
