--- a/src/Argon/GameBundle/Resources/views/Admin/Partial/Race/list.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Partial/Race/list.html.twig
@@ -11,7 +11,7 @@
     </tr>
   {% else %}
     <tr class="warning">
-      <td colspan="1">{{ "race.empty"|trans }}</td>
+      <td colspan="1">{{ "admin.race.empty"|trans }}</td>
     </tr>
   {% endfor %}
   </tbody>
