--- a/src/Argon/GameBundle/Resources/views/Admin/Partial/Skill/list.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Partial/Skill/list.html.twig
@@ -5,8 +5,8 @@
         <th>{{ "admin.skill.ability"|trans }}</th>
       {% endif %}
       <th>{{ "admin.skill.name"|trans }}</th>
-      <th class="text-right">{{ "admin.skill.modifier"|trans }}</th>
-      <th class="text-right">{{ "admin.skill.max"|trans }}</th>
+      <th>{{ "admin.skill.modifier"|trans }}</th>
+      <th>{{ "admin.skill.max"|trans }}</th>
     </tr>
   </thead>
   <tbody>
