--- a/src/Argon/GameBundle/Resources/views/Character/new.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/new.html.twig
@@ -4,6 +4,6 @@
 {% block title %}{{ parent() }} - {{ "character.new"|trans }} - {{ game.name }}{% endblock %}
 
 {% block content %}
-<h1>{{ "character.new"|trans }}</h1>
+<h1>{{ "character.new_title"|trans }}</h1>
 {{ form(form) }}
 {% endblock %}
