--- a/src/Argon/GameBundle/Resources/views/Admin/Race/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/index.html.twig
@@ -1,12 +1,12 @@
 {% extends "ArgonWebBundle::layout_admin.html.twig" %}
 {% set active = "race" %}
 
-{% block title %}{{ parent() }} - {{ "admin.race.title"|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "admin.race.races"|trans }}{% endblock %}
 
 {% block content %}
 <ol id="breadcrumb">
   <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  <li class="active">{{ "admin.race.title"|trans }}</li>
+  <li class="active">{{ "admin.race.races"|trans }}</li>
 </ol>
 {{ include("ArgonGameBundle:Admin\\Partial\\Race:list.html.twig", {"entities": entities}) }}
 {% endblock %}
