--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -1,7 +1,7 @@
 {% extends "ArgonWebBundle::layout.html.twig" %}
 {% set active = "character" %}
 
-{% block title %}{{ parent() }} - {{ "character.title"|trans }} - {{ character }}{% endblock %}
+{% block title %}{{ parent() }} - {{ character }}{% endblock %}
 
 {% block content %}
 <h1>{{ character }}</h1>
@@ -13,7 +13,7 @@
     </dt>
     <dd>{{ character.game.info.fullname }} / {{ character.name }}</dd>
     <dt>
-      <label class="col-sm-2 control-label">{{ "character.race"|trans }}</label>
+      <label>{{ "character.race"|trans }}</label>
     </dt>
     <dd>{{ character.race }}</dd>
   </dl>
@@ -102,7 +102,7 @@
           {% endif %}
         </td>
         <td>{{ skill.skill }}</td>
-        <td class="text-right">{{ skill.level }}</td>
+        <td>{{ skill.level }}</td>
       </tr>
     {% else %}
       <tr class="warning">
