--- a/src/Argon/GameBundle/Resources/views/Block/characters.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Block/characters.html.twig
@@ -13,9 +13,11 @@
         {{ character.race }}
       </td>
       <td>
-        <a href="{{ path("character_view", {"slug": character.slug, "_switch": character.slug}) }}">{{ "character.switch"|trans }}</a>
-        <a href="{{ path("character_edit", {"slug": character.slug}) }}">{{ "character.edit"|trans }}</a>
-        <a href="{{ path("character_skills", {"slug": character.slug}) }}">{{ "character.skills"|trans }}</a>
+        <ul>
+          <li><a href="{{ path("character_view", {"slug": character.slug, "_switch": character.slug}) }}">{{ "character.switch"|trans }}</a></li>
+          <li><a href="{{ path("character_skills", {"slug": character.slug}) }}">{{ "character.skills"|trans }}</a></li>
+          <li><a href="{{ path("character_edit", {"slug": character.slug}) }}">{{ "character.edit"|trans }}</a></li>
+        </ul>
       </td>
     </tr>
   {% else %}
