--- a/src/Argon/UserBundle/Resources/views/layout.html.twig
+++ b/src/Argon/UserBundle/Resources/views/layout.html.twig
@@ -1,6 +1,7 @@
 {% extends "ArgonWebBundle::layout.html.twig" %}
 
 {% block header %}{% endblock %}
+{% block footer %}{% endblock %}
 
 {% block wrapper %}
 <main id="user">
