--- a/src/Argon/WebBundle/Resources/sass/argonbook.scss
+++ b/src/Argon/WebBundle/Resources/sass/argonbook.scss
@@ -1,10 +1,15 @@
 @charset "UTF-8";
 
-$background-color:                  #ffffff;
-$foreground-color:                  #323435;
-$acent-color:                       #ff4136;
-$anchor-color:                      #0074D9;
-$hover-color:                       $acent-color;
+$background-color:                  #1d1f20;
+$foreground-color:                  #d5d5d5;
+$acent-color:                       #8daa91;
+$anchor-color:                      #cddc39;
+$hover-color:                       #cddc39;
+$main-bg-color:                     #cfcfce;
+$main-fg-color:                     #212121;
+$main-anchor-color:                 blue;
+$main-hover-color:                  red;
+$header-bg-color:                   #5e5d5c;
 $header-line-color:                 $acent-color;
 $logo-color:                        $acent-color;
 
@@ -15,5 +20,4 @@ $logo-color:                        $acent-color;
 
 // argonbook
 @import "default/base";
-@import "default/header";
 @import "default/user";
