--- a/src/Argon/WebBundle/Resources/sass/default/_base.scss
+++ b/src/Argon/WebBundle/Resources/sass/default/_base.scss
@@ -2,14 +2,13 @@
 
 body {
   color: $foreground-color;
-  font: 13px/1.4 arial, helvetica, sans-serif;
-  background: $background-color url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAMAAACeL25MAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRF////zsrFFOhhzwAAAA9JREFUeNpiYGTAAAABBgAAJwAC/BnsgQAAAABJRU5ErkJggg==);
+  font: 12px/1.4 arial, helvetica, sans-serif;
+  background-color: $background-color;
 }
 
 a {
   text-decoration: none;
   color: $anchor-color;
-
   &:hover, &:focus {
     text-decoration: underline;
     color: $hover-color;
@@ -17,7 +16,6 @@ a {
 }
 
 section {
-  background-color: $background-color;
   margin: 0 auto;
   padding: 0.67em;
   @include clearfix;
@@ -26,4 +24,57 @@ section {
 
 h1 {
   margin-top: 0;
+}
+
+main section {
+  color: $main-fg-color;
+  background-color: $main-bg-color;
+  a {
+    color: $main-anchor-color;
+    &:hover, &:focus {
+      color: $main-hover-color;
+    }
+  }
+}
+
+header {
+  section {
+    border-bottom: 2px $header-line-color solid;
+    background-color: $header-bg-color;
+  }
+
+  h1 {
+    @include zass-column(3);
+    margin-top: 0;
+    margin-bottom: 0;
+    a {
+      color: $logo-color;
+      font-weight: bold;
+      text-decoration: none;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  ul {
+    @include zass-column(9);
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    float: right;
+    width: auto;
+    li {
+      text-align: center;
+      text-transform: lowercase;
+      list-style-type: none;
+      margin: 9px;
+      float: left;
+    }
+  }
+}
+
+footer section {
+  text-align: right;
+  text-transform: lowercase;
 }
