--- a/src/Argon/GameBundle/Resources/views/Admin/Race/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/index.html.twig
@@ -3,10 +3,13 @@
 
 {% block title %}{{ parent() }} - {{ "admin.race.races"|trans }}{% endblock %}
 
-{% block content %}
+{% block top %}
 <ol id="breadcrumb">
   <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
   <li class="active">{{ "admin.race.races"|trans }}</li>
 </ol>
+{% endblock %}
+
+{% block content %}
 {{ include("ArgonGameBundle:Admin\\Partial\\Race:list.html.twig", {"entities": entities}) }}
 {% endblock %}
