--- a/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
+++ b/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
@@ -3,11 +3,14 @@
 
 {% block title %}{{ parent() }} - {{ "admin.player.players"|trans }}{% endblock %}
 
-{% block content %}
+{% block top %}
 <ol id="breadcrumb">
   <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
   <li class="active">{{ "admin.player.players"|trans }}</li>
 </ol>
+{% endblock %}
+
+{% block content %}
 <table>
   <thead>
     <tr>
