--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/edit.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/edit.html.twig
@@ -3,12 +3,15 @@
 
 {% block title %}{{ parent() }} - {{ "admin.news.news"|trans }} - {{ post }} - {{ "admin.news.edit"|trans }}{% endblock %}
 
-{% block content %}
+{% block top %}
 <ol id="breadcrumb">
   <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
   <li><a href="{{ path("admin_news") }}">{{ "admin.news.news"|trans }}</a></li>
   <li><a href="{{ path("admin_news_view", {"slug": post.slug}) }}">{{ post }}</a></li>
   <li class="active">{{ "admin.news.edit"|trans }}</li>
 </ol>
+{% endblock %}
+
+{% block content %}
 {{ form(form) }}
 {% endblock %}
